# mihomo-app

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Package.resolved  Package.swift  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
Sources/CMihomoDNSSystem/: interface_alias.c
Sources/MihomoAgent/: main.swift
Sources/MihomoBoxCLI/: main.swift
Sources/MihomoControl/: ControlProtocol.swift
Sources/MihomoDNSCore/: AsyncDNSForwarder.swift  Configuration.swift  DNSForwarder.swift  DNSIngressHandlers.swift  DNSMessage.swift  FakeIPDNSPolicy.swift  GlobalDNSPreferences.swift  Logger.swift  LoopbackAlias.swift  MihomoSupervisor.swift  NetworkConsistency.swift  NetworkDNSState.swift  ProxyService.swift  RestartBackoff.swift
Sources/MihomoDaemon/: AgentSupervisor.swift  ComponentUpdater.swift  ControlServer.swift  ControllerBroker.swift  ProfileBroker.swift  main.swift
Tests/: e2e.sh  test_configure_mihomo.py
Tests/Fixtures/: e2e-config.json
assets/: config.js
deploy/: configure_mihomo.py  daemon.json  default-config.yaml  dev.linsheng.mihomo-app.daemon.plist  dev.linsheng.mihomo.daemon.plist
docs/: architecture.md  build-release.md  daemon-and-dns.md  decisions.md  operations.md  security.md  tray-and-controller.md
scripts/: fetch-mihomo.sh  install-daemon-remote.sh  install-daemon.sh  prepare-binaries.sh  prepare-icons.sh  prepare-metacubexd.sh  prepare-rust-cache.sh  release-macos.sh  validate.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  component_sync.rs  dashboard.rs  lib.rs  main.rs  mihomo.rs  tray.rs  updater.rs
(+3 files in other folders)
