[package]
name = "mihomo-app"
version = "0.1.0"
description = "A native macOS menu bar controller for Mihomo"
authors = ["Sheng Lin"]
license = "MIT"
repository = "https://github.com/linsheng/mihomo-app"
edition = "2021"

[lib]
name = "mihomo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["rt", "time"] }
urlencoding = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
