[package]
name = "mihomo-app"
version = "0.4.1"
description = "A native macOS menu bar controller for Mihomo"
authors = ["Sheng Lin"]
license = "MIT"
repository = "https://github.com/psyche08/mihomo-app"
edition = "2021"

[lib]
name = "mihomo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["process", "rt", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
